--- a/pom.xml
+++ b/pom.xml
@@ -4,23 +4,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <properties>
-        <project_artifactId>calculator-project</project_artifactId>
-        <project_version>1.2</project_version>
-    </properties>
-
+    <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <groupId>org.wangpai.calculator</groupId>
-    <artifactId>${project_artifactId}</artifactId>
-    <version>${project_version}</version>
+    <artifactId>calculator-project</artifactId>
+    <version>1.2</version>
     <packaging>pom</packaging>
-    <name>${project_artifactId}</name>
+    <name>calculator-project</name>
+
     <modules>
         <module>calculator-core</module>
         <module>calculator-exception</module>
     </modules>
 
+    <properties>
+        <project_version>1.2</project_version>
+        <spring.version>5.2.9.RELEASE</spring.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.wangpai.calculator</groupId>
                 <artifactId>calculator-core</artifactId>
@@ -43,6 +46,25 @@
                 <version>5.8.0-M1</version>
                 <scope>test</scope>
             </dependency>
+
+            <!-- 提供注解 @Controller 等 -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <!-- 提供注解 @Resource -->
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework</groupId>-->
+<!--                <artifactId>spring-core</artifactId>-->
+<!--                <version>${spring.version}</version>-->
+<!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
