--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <groupId>org.wangpai.calculator</groupId>
     <artifactId>calculator-project</artifactId>
-    <version>1.2</version>
+    <version>2.2</version>
     <packaging>pom</packaging>
     <name>calculator-project</name>
 
@@ -17,7 +17,8 @@
     </modules>
 
     <properties>
-        <project_version>1.2</project_version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project_version>2.2</project_version>
         <spring.version>5.2.9.RELEASE</spring.version>
     </properties>
 
@@ -60,11 +61,6 @@
                 <artifactId>javax.annotation-api</artifactId>
                 <version>1.3.2</version>
             </dependency>
-<!--            <dependency>-->
-<!--                <groupId>org.springframework</groupId>-->
-<!--                <artifactId>spring-core</artifactId>-->
-<!--                <version>${spring.version}</version>-->
-<!--            </dependency>-->
 
         </dependencies>
     </dependencyManagement>
