--- a/calculator-ui/pom.xml
+++ b/calculator-ui/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <artifactId>calculator-windows</artifactId>
         <groupId>org.wangpai.calculator</groupId>
-        <version>3.0</version>
+        <version>3.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>calculator-ui</artifactId>
-    <version>3.0</version>
-
-
 
     <dependencies>
 
@@ -20,10 +19,10 @@
             <groupId>org.wangpai.calculator</groupId>
             <artifactId>calculator-backend</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.wangpai.calculator</groupId>-->
-<!--            <artifactId>calculator-entrance</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.wangpai.calculator</groupId>
+            <artifactId>calculator-exception</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
