--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,8 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <groupId>org.wangpai.calculator</groupId>
     <artifactId>calculator-windows</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
     <packaging>pom</packaging>
-    <name>calculator-windows</name>
 
     <modules>
         <module>calculator-entrance</module>
@@ -21,7 +20,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project_version>3.0</project_version>
+        <project_version>3.1</project_version>
         <openjfx.version>17-ea+11</openjfx.version>
         <junit.version>5.8.0-M1</junit.version>
         <spring.version>5.2.9.RELEASE</spring.version>
@@ -85,47 +84,8 @@
                 <version>${spring.version}</version>
             </dependency>
 
-            <!-- 提供注解 @Resource -->
-            <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>1.3.2</version>
-            </dependency>
-
         </dependencies>
     </dependencyManagement>
-
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.8.1</version>-->
-<!--&lt;!&ndash;                <configuration>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <source>11</source>&ndash;&gt;-->
-<!--&lt;!&ndash;                    <target>11</target>&ndash;&gt;-->
-<!--&lt;!&ndash;                </configuration>&ndash;&gt;-->
-<!--            </plugin>-->
-<!--            <plugin>-->
-<!--                <groupId>org.openjfx</groupId>-->
-<!--                <artifactId>javafx-maven-plugin</artifactId>-->
-<!--                <version>0.0.6</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        &lt;!&ndash; Default configuration for running with: mvn clean javafx:run &ndash;&gt;-->
-<!--                        <id>default-cli</id>-->
-<!--                        <configuration>-->
-<!--                            <mainClass>-->
-<!--&lt;!&ndash;                                org.wangpai.calculator.calculatorwindows/&ndash;&gt;-->
-<!--&lt;!&ndash;                                org.wangpai.calculator.calculatorwindows.HelloApplication&ndash;&gt;-->
-<!--                            </mainClass>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
-<!--        </plugins>-->
-<!--    </build>-->
-
 
     <build>
         <plugins>
@@ -164,6 +124,33 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <!--
+            此插件是用于在每个模块下生成该模块所直接和间接引用的所有依赖。此插件可在生命周期 package 中被执行。
+            此插件暂时没起到什么作用，留着以后备用
+            -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                            <overWriteReleases>true</overWriteReleases>
+                            <overWriteSnapshots>true</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                            <includeScope>compile</includeScope>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
