--- a/calculator-entrance/pom.xml
+++ b/calculator-entrance/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>calculator-windows</artifactId>
         <groupId>org.wangpai.calculator</groupId>
-        <version>3.1</version>
+        <version>3.2</version>
     </parent>
 
     <artifactId>calculator-entrance</artifactId>
@@ -39,5 +39,25 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- 在本目录下，使用命令 mvn javafx:run 来运行此插件 -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.6</version>
+                <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>org.wangpai.calculator.CalculatorApplication</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
 
 </project>
