【新版本】M.3.3 发布

--- a/calculator-backend/pom.xml
+++ b/calculator-backend/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <artifactId>calculator-windows</artifactId>
         <groupId>org.wangpai.calculator</groupId>
-        <version>3.2.2</version>
+        <version>3.3</version>
     </parent>
 
     <artifactId>calculator-backend</artifactId>
@@ -20,10 +20,23 @@
             <groupId>org.wangpai.calculator</groupId>
             <artifactId>calculator-exception</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wangpai.calculator</groupId>
+            <artifactId>calculator-ui-depended</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
