--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <groupId>org.wangpai.calculator</groupId>
     <artifactId>calculator-windows</artifactId>
-    <version>3.2.2</version>
+    <version>3.3</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -16,10 +16,12 @@
         <module>calculator-ui</module>
         <module>calculator-backend</module>
         <module>calculator-exception</module>
+        <module>calculator-ui-depended</module>
+
     </modules>
 
     <properties>
-        <project_version>3.2.2</project_version>
+        <project_version>3.3</project_version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
@@ -29,6 +31,9 @@
         <projectlombok.version>1.18.20</projectlombok.version>
         <openjfx.version>17-ea+11</openjfx.version>
         <spring.version>5.2.9.RELEASE</spring.version>
+        <slf4j.version>1.7.13</slf4j.version>
+
+        <mainClass>org.wangpai.calculator.CalculatorApplication</mainClass>
     </properties>
 
     <dependencyManagement>
@@ -53,18 +58,35 @@
                 <artifactId>calculator-exception</artifactId>
                 <version>${project_version}</version>
             </dependency>
-
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
+                <groupId>org.wangpai.calculator</groupId>
+                <artifactId>calculator-ui-depended</artifactId>
+                <version>${project_version}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${projectlombok.version}</version>
                 <scope>provided</scope>
+            </dependency>
+            <!-- SLF4J 核心 JAR 包 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <!-- 设置 SLF4J 与之绑定的日志包 -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.openjfx</groupId>
@@ -88,6 +110,8 @@
 
     <build>
         <plugins>
+
+            <!-- 此插件必须放在父 POM 中  -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -109,42 +133,49 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <archive>
+                        <manifest>
+                            <!-- 配置程序运行入口所在的类 -->
+                            <mainClass>${mainClass}</mainClass>
+                        </manifest>
+                    </archive>
+                    <!-- 设置 JAR 包输出目录 -->
+                    <outputDirectory>${project.build.directory}/#maven-assembly-plugin</outputDirectory>
                     <!-- 设置打包后的 JAR 包的目录结构为默认 -->
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <!-- 配置程序运行入口所在的类 -->
-                            <mainClass>org.wangpai.calculator.CalculatorApplication</mainClass>
-                        </manifest>
-                    </archive>
                 </configuration>
             </plugin>
 
             <!--
-            此插件是用于在每个模块下生成该模块所直接和间接引用的所有依赖。此插件可在生命周期 package 中被执行。
+            此插件是用于拷贝该模块的资源文件指指定目录。
+            但生成的资源文件只包含本模块的资源文件，不包括其依赖的其它模块的资源文件
+            此插件可在生命周期 package 中被执行。
+            此插件往往与插件 maven-jar-plugin、maven-dependency-plugin 一起使用
+
             此插件暂时没起到什么作用，留着以后备用
             -->
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.2</version>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
+                        <id>copy-resources</id>
+                        <!-- 设置此插件执行的阶段，可更改为其它阶段 -->
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>copy-resources</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>true</overWriteReleases>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                            <includeScope>compile</includeScope>
+                            <!-- 设置资源文件输出目录 -->
+                            <outputDirectory>${project.build.directory}/#maven-resources-plugin</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <!-- 设置原资源文件所在目录 -->
+                                    <directory>src/main/resources</directory>
+                                </resource>
+                            </resources>
                         </configuration>
                     </execution>
                 </executions>
