--- a/calculator-backend/pom.xml
+++ b/calculator-backend/pom.xml
@@ -8,8 +8,8 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <parent>
         <groupId>org.wangpai.calculator</groupId>
-        <artifactId>calculator-windows</artifactId>
-        <version>3.4</version>
+        <artifactId>calculator-windows-ui</artifactId>
+        <version>3.5</version>
     </parent>
 
     <artifactId>calculator-backend</artifactId>
@@ -24,7 +24,6 @@
             <groupId>org.wangpai.calculator</groupId>
             <artifactId>calculator-ui-depended</artifactId>
         </dependency>
-
 
         <dependency>
             <groupId>org.projectlombok</groupId>
