--- a/calculator-exception/pom.xml
+++ b/calculator-exception/pom.xml
@@ -8,8 +8,8 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <parent>
         <groupId>org.wangpai.calculator</groupId>
-        <artifactId>calculator-windows</artifactId>
-        <version>3.4</version>
+        <artifactId>calculator-windows-ui</artifactId>
+        <version>3.5</version>
     </parent>
 
     <artifactId>calculator-exception</artifactId>
