--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,13 @@
     <!-- 此部分不能使用 <properties/...> 中的元素来取代，必须直接给出具体的内容  -->
     <groupId>org.wangpai.calculator</groupId>
     <artifactId>calculator-windows-ui</artifactId>
-    <version>3.5</version>
+    <version>4.0</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>calculator-entrance</module>
         <module>calculator-ui</module>
         <module>calculator-backend</module>
-        <module>calculator-exception</module>
-        <module>calculator-ui-depended</module>
     </modules>
 
     <properties>
@@ -26,7 +24,8 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <!-- 凡是自定义的属性，都要加 .custom 后缀，以防与已有的预置属性相冲突 -->
-        <project.version.custom>3.5</project.version.custom>
+        <project.version.custom>4.0</project.version.custom>
+        <mathlab-fx.version.custom>1.0</mathlab-fx.version.custom>
 
         <junit.version.custom>5.8.2</junit.version.custom>
         <lombok.version.custom>1.18.20</lombok.version.custom>
@@ -40,6 +39,25 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!-- 这些依赖是笔者自己的另一个项目：mathlab-fx 的子 Maven 模块 -->
+            <dependency>
+                <groupId>org.wangpai.mathlab</groupId>
+                <artifactId>exception</artifactId>
+                <version>${mathlab-fx.version.custom}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wangpai.mathlab</groupId>
+                <artifactId>mathlib</artifactId>
+                <version>${mathlab-fx.version.custom}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wangpai.mathlab</groupId>
+                <artifactId>mathexp</artifactId>
+                <version>${mathlab-fx.version.custom}</version>
+            </dependency>
+            <!-- *************************************************************** -->
+
             <dependency>
                 <groupId>org.wangpai.calculator</groupId>
                 <artifactId>calculator-entrance</artifactId>
@@ -53,16 +71,6 @@
             <dependency>
                 <groupId>org.wangpai.calculator</groupId>
                 <artifactId>calculator-backend</artifactId>
-                <version>${project.version.custom}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wangpai.calculator</groupId>
-                <artifactId>calculator-exception</artifactId>
-                <version>${project.version.custom}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wangpai.calculator</groupId>
-                <artifactId>calculator-ui-depended</artifactId>
                 <version>${project.version.custom}</version>
             </dependency>
 
